--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ on:
     paths-ignore:
       - 'README.md'
   push:
+    branches:
+      - main
     paths-ignore:
       - 'README.md'
 
@@ -55,7 +57,7 @@ jobs:
     if: |
       (github.event_name == 'pull_request_target' &&
       github.event.label.name == 'ok-to-test') ||
-      contains(fromJson('["push", "workflow_dispatch", "schedule"]'), github.event_name)
+      contains(fromJson('["push", "pull_request", "workflow_dispatch", "schedule"]'), github.event_name)
     name: Terraform Provider Acceptance Tests
     needs: build
     runs-on: ubuntu-latest
