add crowdstrike_prevention_policy_windows resource
move hostGroupAction to its own package

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,5 +91,6 @@ jobs:
           FALCON_CLIENT_ID: ${{ secrets.FALCON_CLIENT_ID }}
           FALCON_CLIENT_SECRET: ${{ secrets.FALCON_CLIENT_SECRET }}
           HOST_GROUP_ID: ${{ secrets.HOST_GROUP_ID }}
-        run: go test -v -cover ./internal/provider/
+          IOA_RULE_GROUP_ID: ${{ secrets.IOA_RULE_GROUP_ID }}
+        run: go test -v -cover ./internal/...
  
