--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,5 +47,5 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/crowdstrike/pulumi-crowdstrike/dispatches \
-            -d "{\"event_type\": \"$event_type\"}"
+            -d "{\"event_type\": \"build-pulumi-provider\"}"
         
