--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,17 +40,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GPG_FINGERPRINT: ${{ secrets.FINGERPRINT }}
       - name: Trigger Pulumi Provider Build
-        run: |
-          # Set the required variables
-          repo_owner="CrowdStrike" 
-          repo_name="pulumi-crowdstrike"  
-          event_type="build-pulumi-provider"
-  
+        run: |  
           curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/$repo_owner/$repo_name/dispatches \
-            -d "{\"event_type\": \"$event_type\"}"
+            https://api.github.com/repos/crowdstrike/pulumi-crowdstrike/dispatches \
+            -d "{\"event_type\": \"build-pulumi-provider\"}"
         
