--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ website/vendor
 
 # Keep windows files with windows line endings
 *.winfile eol=crlf
+
+# terraform code gen
+openapi.json
+./provider_crowdstrike/
+
