--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,11 +1,9 @@
-# Visit https://golangci-lint.run/ for usage documentation
-# and information on other useful linters
+---
 issues:
   max-per-linter: 0
   max-same-issues: 0
-
+  fix: true
 linters:
-  disable-all: true
   enable:
     - durationcheck
     - errcheck
@@ -19,8 +17,14 @@ linters:
     - nilerr
     - predeclared
     - staticcheck
-    - usetesting 
+    - usetesting
     - unconvert
     - unparam
     - unused
     - govet
+    - gocyclo
+    - errchkjson
+    - gocritic
+    - goimports
+    - contextcheck
+    - importas
