Replace context.Background() with proper context parameter

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "program": "${workspaceFolder}",
             "env": {},
             "args": [
-                "-debug",
+                "-debug"
             ]
         }
     ]
