ci: improve test performance with increased parallelism and failfast
Increase Go test parallelism from 1 to 10 workers and add -failfast flag
to speed up CI test execution and provide quicker feedback on failures.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,4 +93,4 @@ jobs:
           FALCON_CLOUD: ${{ secrets.FALCON_CLOUD }}
           HOST_GROUP_ID: ${{ secrets.HOST_GROUP_ID }}
           IOA_RULE_GROUP_ID: ${{ secrets.IOA_RULE_GROUP_ID }}
-        run: go test -v -cover ./internal/... -parallel 1
+        run: go test -v -cover ./internal/... -parallel 10 -failfast
