--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,12 @@
             "name": "Debug Terraform Provider",
             "type": "go",
             "request": "launch",
-            "mode": "debug",
+            "mode": "auto",
             "program": "${workspaceFolder}",
             "env": {},
             "args": [
                 "-debug"
-            ]
+            ],
         }
     ]
 }
