--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           go-version-file: 'go.mod'
           cache: true
-      - uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3.1.2
+      - uses: hashicorp/setup-terraform@eab1d37cffc3940f9f65f9fe6e4cdd22569f6b94
         with:
           terraform_version: '1.8.0-alpha20240216'
           terraform_wrapper: false
@@ -81,7 +81,7 @@ jobs:
         with:
           go-version-file: 'go.mod'
           cache: true
-      - uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3.1.2
+      - uses: hashicorp/setup-terraform@eab1d37cffc3940f9f65f9fe6e4cdd22569f6b94
         with:
           terraform_version: ${{ matrix.terraform }}
           terraform_wrapper: false
