--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,18 +2,12 @@ name: ci
 
 on:
   workflow_dispatch:
-  pull_request_target:
-    types: [labeled]
-    paths-ignore:
-      - "README.md"
   pull_request:
-    paths-ignore:
-      - "README.md"
+    paths:
+      - "**.go"
   push:
-    branches:
-      - main
-    paths-ignore:
-      - "README.md"
+    paths:
+      - "**.go"
 
 permissions:
   contents: read
@@ -31,10 +25,38 @@ jobs:
           cache: true
       - run: go mod download
       - run: go build -v .
+
+  golangci:
+    name: lint
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: read
+      pull-requests: read
+    steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      - uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
+        with:
+          go-version-file: "go.mod"
+          cache: true
       - name: Run linters
         uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9 # v4.0.0
         with:
           version: latest
+          only-new-issues: true
+
+  unit-test:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      - uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
+        with:
+          go-version-file: "go.mod"
+          cache: true
+      - run: go mod download
+      - run: make test
 
   generate:
     runs-on: ubuntu-latest
@@ -46,51 +68,9 @@ jobs:
           cache: true
       - uses: hashicorp/setup-terraform@eab1d37cffc3940f9f65f9fe6e4cdd22569f6b94
         with:
-          terraform_version: "1.8.0-alpha20240216"
           terraform_wrapper: false
-      - run: go generate ./...
+      - run: make gen
       - name: git diff
         run: |
           git diff --compact-summary --exit-code || \
             (echo; echo "Unexpected difference in directories after code generation. Run 'go generate ./...' command and commit."; exit 1)
-  # Run acceptance tests in a matrix with Terraform CLI versions
-  test:
-    if: |
-      (github.event_name == 'pull_request_target' &&
-      github.event.label.name == 'ok-to-test') ||
-      contains(fromJson('["push", "workflow_dispatch", "schedule"]'), github.event_name)
-    name: Terraform Provider Acceptance Tests
-    needs: build
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    strategy:
-      fail-fast: false
-      matrix:
-        # list whatever Terraform versions here you would like to support
-        terraform:
-          - "1.9.*"
-          - "1.10.*"
-          - "1.11.*"
-          - "1.12.*"
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-        with:
-          ref: ${{github.event.pull_request.head.sha}}
-          repository: ${{github.event.pull_request.head.repo.full_name}}
-      - uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
-        with:
-          go-version-file: "go.mod"
-          cache: true
-      - uses: hashicorp/setup-terraform@eab1d37cffc3940f9f65f9fe6e4cdd22569f6b94
-        with:
-          terraform_version: ${{ matrix.terraform }}
-          terraform_wrapper: false
-      - run: go mod download
-      - env:
-          TF_ACC: "1"
-          FALCON_CLIENT_ID: ${{ secrets.FALCON_CLIENT_ID }}
-          FALCON_CLIENT_SECRET: ${{ secrets.FALCON_CLIENT_SECRET }}
-          FALCON_CLOUD: ${{ secrets.FALCON_CLOUD }}
-          HOST_GROUP_ID: ${{ secrets.HOST_GROUP_ID }}
-          IOA_RULE_GROUP_ID: ${{ secrets.IOA_RULE_GROUP_ID }}
-        run: go test -v -cover ./internal/... -parallel 10 -failfast
