--- a/.golangci.yml
+++ b/.golangci.yml
@@ -35,10 +35,10 @@ linters:
 issues:
   max-issues-per-linter: 0
   max-same-issues: 0
-  fix: true
+  fix: false
 formatters:
   enable:
-    - gofmt
+    - gofumpt
     - goimports
   exclusions:
     generated: lax
@@ -46,3 +46,6 @@ formatters:
       - third_party$
       - builtin$
       - examples$
+  settings:
+    gofumpt:
+      extra-rules: true
