chore: enable goreleaser changelog generation from conventional commits (#292)
Enable GoReleaser's built-in changelog to automatically generate grouped
release notes from conventional commit messages. Commits are categorized
into Features, Bug Fixes, Performance, Refactoring, Documentation, and
Maintenance sections. CI/build commits and merge commits are filtered out.

Also enable draft releases so changelogs can be reviewed before publishing,
and remove the empty CHANGELOG.md placeholder.

Closes #292

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -55,7 +55,31 @@ release:
   extra_files:
     - glob: 'terraform-registry-manifest.json'
       name_template: '{{ .ProjectName }}_{{ .Version }}_manifest.json'
-  # If you want to manually examine the release before its live, uncomment this line:
-  # draft: true
+  draft: true
 changelog:
-  disable: true
+  sort: asc
+  use: github
+  filters:
+    exclude:
+      - "^test:"
+      - "^chore"
+      - "merge conflict"
+      - Merge pull request
+      - Merge remote-tracking branch
+      - Merge branch
+      - go mod tidy
+  groups:
+    - title: "Features"
+      regexp: "^.*feat[(\\w)]*:+.*$"
+      order: 100
+    - title: "Bug Fixes"
+      regexp: "^.*fix[(\\w)]*:+.*$"
+      order: 200
+    - title: "Dependencies"
+      regexp: "^.*\\(deps\\)*:+.*$"
+      order: 300
+    - title: "Documentation"
+      regexp: "^.*docs[(\\w)]*:+.*$"
+      order: 400
+    - title: "Other Work"
+      order: 9999
